--- a/UI/css/mainPage.css
+++ b/UI/css/mainPage.css
@@ -44,14 +44,32 @@
     background-color: #d9d9d9;
     min-width: 100%;
 }
+
+#categoriesPage{
+    min-width: 80%;
+}
+
 .tagImg{
     width: 80px;
     height: 80px;
     background-color: white;
 }
+.category{
+    cursor: pointer;
+}
+
 .category h4{
     font-size: small;
 }
 .total{
     text-align: right;
+}
+
+#arrowTop {
+    background-color: #FB8C00;
+    position: fixed;
+    bottom: 10px;
+    right: 0px;
+    border-radius: 50%;
+    cursor: pointer;
 }
